[package]
name = "tmtc-system"
version = "4.4.0"
edition = "2024"

[features]
ground = ["dep:serde", "macros/ground"]

[dependencies]
macros = { package = "tmtc-system-macros", path = "./macros/" }
#heapless = { version = "0.9", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
serde_cbor = "0.11.2"
